--- a/consul/tests/docker-compose.yml
+++ b/consul/tests/docker-compose.yml
@@ -26,7 +26,7 @@ services:
       HAB_CONSUL: |
         bootstrap_expect=3
   tests:
-    image: starkandwayne-consul-tests
+    image: eeyun-consul-tests
     build: ./
     environment:
       STANDALONE_HOST: "standalone"
