--- a/postgresql/tests/docker-compose.yml
+++ b/postgresql/tests/docker-compose.yml
@@ -1,33 +1,15 @@
 version: '2'
 
 services:
-  standalone:
-    image: starkandwayne/postgresql:edge
-    command: "start starkandwayne/postgresql"
-    environment:
-      HAB_POSTGRESQL: |
-
   pg1:
-    image: starkandwayne/postgresql:edge
-    command: "start starkandwayne/postgresql --group cluster --peer standalone --topology leader"
-    links:
-    - standalone
+    image: core/postgresql
+    command: "start core/postgresql --group cluster --topology leader"
   pg2:
-    image: starkandwayne/postgresql:edge
-    command: "start starkandwayne/postgresql --group cluster --peer standalone --topology leader"
-    links:
-    - standalone
+    image: core/postgresql
+    command: "start core/postgresql --group cluster --peer pg1 --topology leader"
   pg3:
-    image: starkandwayne/postgresql:edge
-    command: "start starkandwayne/postgresql --group cluster --peer standalone --topology leader"
-    links:
-    - standalone
-  tests:
-    image: starkandwayne-postgresql-tests
-    build: ./
-    environment:
-      PGUSER: admin
-      PGPASSWORD: admin
-      PGDATABASE: postgres
-    links:
-    - standalone
+    image: core/postgresql
+    command: "start core/postgresql --group cluster --peer pg1 --topology leader"
+  cweb:
+    image: eeyun/concourse-web
+    command: "start eeyun/concourse-web --bind database:postgresql.cluster --peer pg1"
